add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)
add_executable(aufgabe1_3 Aufgabe1_3.cpp)
add_executable(aufgabe1_8 Aufgabe1_8.cpp)
add_executable(aufgabe1_9 Aufgabe1_9.cpp)
add_executable(aufgabe1_10 Aufgabe1_10.cpp)


# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
