add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)
add_executable(aufgabe1_3 Aufgabe1_3.cpp)
add_executable(aufgabe1_8 Aufgabe1_8.cpp)
add_executable(aufgabe1_9 Aufgabe1_9.cpp)
add_executable(aufgabe1_10 Aufgabe1_10.cpp)
add_executable(aufgabe1_11 Aufgabe1_11.cpp)
add_executable(aufgabe1_12 Aufgabe1_12.cpp)
add_executable(aufgabe1_13 Aufgabe1_13.cpp)
add_executable(aufgabe1_14 Aufgabe1_14.cpp)
add_executable(aufgabe1_15 Aufgabe1_15.cpp)

# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
